[project]
name = "pensarsecurityeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "black>=25.1.0",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.30.2",
    "jsonlines>=4.0.0",
    "openai>=1.73.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.1",
]
